PROJECT(gea)
SET(PROJECT_VERSION_MAJOR "2")
SET(PROJECT_VERSION_MINOR "2")


SET(CPACK_PACKAGE_NAME "Interf2")
SET(CPACK_PACKAGE_VENDOR "Andre Herms <aherms$ivs.cs.uni-magdeburg.de>")
SET(CPACK_PACKAGE_VERSION_MAJOR ${PROJECT_VERSION_MAJOR})
SET(CPACK_PACKAGE_VERSION_MINOR ${PROJECT_VERSION_MINOR})
SET(CPACK_PACKAGE_VERSION_PATCH "0")

INCLUDE(CheckIncludeFileCXX)

INCLUDE(TestCXXAcceptsFlag)
INCLUDE(CPack)

CHECK_CXX_ACCEPTS_FLAG(-fvisibility=hidden GXX_ACCEPTS_VISHIDDEN)

INCLUDE(TestForANSIForScope)
INCLUDE(TestForANSIStreamHeaders)
INCLUDE(TestForSTDNamespace)

ADD_SUBDIRECTORY(src)

