PROJECT(gea)
SET(PROJECT_VERSION_MAJOR "2")
SET(PROJECT_VERSION_MINOR "2")


SET(CPACK_PACKAGE_NAME "Interf2")
SET(CPACK_PACKAGE_VENDOR "Andre Herms <aherms$ivs.cs.uni-magdeburg.de>")
SET(CPACK_PACKAGE_VERSION_MAJOR ${PROJECT_VERSION_MAJOR})
SET(CPACK_PACKAGE_VERSION_MINOR ${PROJECT_VERSION_MINOR})
SET(CPACK_PACKAGE_VERSION_PATCH "0")

INCLUDE(CheckIncludeFileCXX)

INCLUDE(TestCXXAcceptsFlag)
INCLUDE(CPack)

CHECK_CXX_ACCEPTS_FLAG(-fvisibility=hidden GXX_ACCEPTS_VISHIDDEN)

INCLUDE(TestForANSIForScope)
INCLUDE(TestForANSIStreamHeaders)
INCLUDE(TestForSTDNamespace)

INCLUDE(CheckIncludeFile)
INCLUDE(CheckLibraryExists)

CHECK_INCLUDE_FILE(dlfcn.h DLFCN_HEADER_FOUND)
IF(NOT DLFCN_HEADER_FOUND)
  MESSAGE(FATAL_ERROR "cannot find the header <dlfcn.h> required for dynamic linking")
ENDIF(NOT DLFCN_HEADER_FOUND)

CHECK_LIBRARY_EXISTS(dl dlsym "" LIB_DL_FOUND)

ADD_SUBDIRECTORY(src)

ADD_SUBDIRECTORY(include/gea)

ADD_SUBDIRECTORY(src/utils)


ADD_SUBDIRECTORY(include/gea)




# Local variables:
# mode:cmake
# End:
